// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`texture description roundtrip should describe the repacked sheet the same way 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read dds file <sandbox>/packed/ui/ui_test_sheet.dds",
    "File size: 16532 (16kb)",
    "Metadata size: 148",
    "Data size: 16384 (16kb)",
    "Size: 256 x 64",
    "Mipmap: 1 - 16",
    "Linear size: 16384",
    "Block size: 16",
    "Four CC: 894720068",
    "DXGI format: BC3_UNorm",
  ],
}
`;

exports[`texture description roundtrip should fail when the output subdirectory does not exist 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Execution of command 'pack-texture-description' failed, error: IO error: The system cannot find the path specified. (os error 3)",
  ],
  "stdout": [
    "Packing for 1 files",
  ],
}
`;

exports[`texture description roundtrip should pack the regions back into a sheet 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Packing for 1 files",
    "Packed 1 files",
  ],
}
`;

exports[`texture description roundtrip should unpack every described region 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/unpacked, parallel - false",
    "Unpacking for 1 files",
    "Unpacked 1 files",
  ],
}
`;

exports[`texture description roundtrip should write the expected files 1`] = `
[
  {
    "path": "packed/ui/.keep",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "packed/ui/ui_test_sheet.dds",
    "sha256": "6e47e1aa4712a7800af1290b2063f6a5cdb367976701034a4b9f8e2efdfddb04",
    "size": 16532,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_end.dds",
    "sha256": "a07cacbd97c81a6cff05eb1955b121bbef7b4aabf8443512e7cf13a7527aae6e",
    "size": 4244,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_left.dds",
    "sha256": "8465624c2cad1d2486054856003ee6d275f53a36113059c36b972d512a1b44aa",
    "size": 4244,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_mid.dds",
    "sha256": "b01ac10e62d9f2c72831f0c1c5e44960e305cf869dbf33b1c5308047a23a5c26",
    "size": 4244,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_right.dds",
    "sha256": "49a5d63e0a75800599731341c7b078d1b97028e12a6d956f9bd5152e16f493b3",
    "size": 4244,
  },
]
`;
